fix: reduce loading page z-index

--- a/src/renderer-app/src/LoadingPage.less
+++ b/src/renderer-app/src/LoadingPage.less
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    z-index: 1002;
+    z-index: 1000;
     background-color: white;
 }
 
